// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change head content when pulling down 1`] = `
<div class="van-pull-refresh">
  <div class="van-pull-refresh__track" style="transition: 0ms; transform: translate3d(0,20px, 0);">
    <div class="van-pull-refresh__head">
      <div class="van-pull-refresh__text">下拉即可刷新...</div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 2`] = `
<div class="van-pull-refresh">
  <div class="van-pull-refresh__track" style="transition: 0ms; transform: translate3d(0,75px, 0);">
    <div class="van-pull-refresh__head">
      <div class="van-pull-refresh__text">释放即可刷新...</div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 3`] = `
<div class="van-pull-refresh">
  <div class="van-pull-refresh__track" style="transition: 300ms; transform: translate3d(0,50px, 0);">
    <div class="van-pull-refresh__head">
      <div class="van-loading van-loading--circular"><span class="van-loading__spinner van-loading__spinner--circular" style="color: rgb(201, 201, 201); width: 16px; height: 16px;"><svg viewBox="25 25 50 50" class="van-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span><span class="van-loading__text">加载中...</span></div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 4`] = `
<div class="van-pull-refresh">
  <div class="van-pull-refresh__track" style="transition: 300ms; transform: translate3d(0,50px, 0);">
    <div class="van-pull-refresh__head">
      <div class="van-loading van-loading--circular"><span class="van-loading__spinner van-loading__spinner--circular" style="color: rgb(201, 201, 201); width: 16px; height: 16px;"><svg viewBox="25 25 50 50" class="van-loading__circular"><circle cx="50" cy="50" r="20" fill="none"></circle></svg></span><span class="van-loading__text">加载中...</span></div>
    </div>
  </div>
</div>
`;

exports[`change head content when pulling down 5`] = `
<div class="van-pull-refresh">
  <div class="van-pull-refresh__track" style="transition: 300ms;">
    <div class="van-pull-refresh__head"></div>
  </div>
</div>
`;

exports[`not in page top 1`] = `
<div class="van-pull-refresh">
  <div class="van-pull-refresh__track" style="transition: 0ms;">
    <div class="van-pull-refresh__head"></div>
  </div>
</div>
`;
